1,清除前端默认登陆名密码， 2，支持通过环境变量配置信息 3，开箱即用的支持docker

--- a/xxl-job-admin/Dockerfile
+++ b/xxl-job-admin/Dockerfile
@@ -1,11 +1,7 @@
-FROM openjdk:7-jre-slim
-MAINTAINER xuxueli
+FROM registry.cn-hangzhou.aliyuncs.com/mt23/jre8-alpine-shanghai:1.0.0
+MAINTAINER mt23
 
-ENV PARAMS=""
 
-ENV TZ=PRC
-RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+ADD target/xxl-job-admin-2.0.2.jar /app.jar
 
-ADD target/xxl-job-admin-*.jar /app.jar
-
-ENTRYPOINT ["sh","-c","java -jar /app.jar $PARAMS"]
+ENTRYPOINT ["sh","-c","java -jar /app.jar"]
